# RedSpectre

./: .cursorrules  .env.example  .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  security_audit_results.txt  slither_report.json
agent/: Dockerfile  config.py  requirements.txt  run_agent.sh  setup_redspectre.py
agent/agent_code/: __init__.py  architect_llm.py  dynamic_executor.py  orchestrator.py  parsers.py  prompts.py  static_scanner.py
agent/agent_code/templates/: BalancerV2_PrecisionLoss.t.sol.jinja2  BalancerV2_PrecisionLoss_2025_11.t.sol.jinja2  ExploitTemplate.t.sol.jinja2  GenericExploit.t.sol.jinja2  Kame_ArbitraryCall.t.sol.jinja2  Kame_ArbitraryCall_2025_09.t.sol.jinja2  MIMSpell3_InsolvencyBypass.t.sol.jinja2  MIMSpell3_InsolvencyBypass_2025_10.t.sol.jinja2  TokenHolder_AccessControl.t.sol.jinja2  TokenHolder_AccessControl_2025_10.t.sol.jinja2
agent/foundry_test/: foundry.toml  slither_report.json
agent/foundry_test/cache/: solidity-files-cache.json
agent/foundry_test/src/: Target.sol
agent/foundry_test/test/: Exploit_EXP001.t.sol  Sample.t.sol  UniversalExploit.t.sol
agent/services/: auditor.py  dedup.py  reference_docs.py  scout.py  swarm.py
agent/services/personas/: access_control_expert.py  arithmetic_expert.py  audit_generalist.py  base.py  centralization_expert.py  compiler_expert.py  critic.py  dos_expert.py  economic_expert.py  error_handling_expert.py  flashloan_expert.py  logic_expert.py  (+15 more)
benchmarks/: LLMexamples.json  last_benchmark.json  run_004.json  run_005.json  run_repo1.json  vulnerability_findings.md
(+1 files in other folders)
